[B] Hide mobile nav when main header is invisible and not sticky - Also prevents mobile nav from hiding if the user scrolls whie menu is open - Also also allows user to scroll mobile menu if menu is taller than window height - Resolves #12

--- a/components/global/Header/_navigation.scss
+++ b/components/global/Header/_navigation.scss
@@ -20,11 +20,12 @@ $_link-gap: 14px;
     position: fixed;
     top: var(--height);
     right: 0;
-    max-height: 100vh;
+    max-height: calc(100vh - var(--height));
     flex-direction: column;
     transition: transform 0.25s ease-in-out, visibility 0s 0.25s;
     transform: translateX(100%);
     visibility: hidden;
+    overflow-y: auto;
 
     &.c-nav-list--is-active {
       transform: translateX(0);
